# seedrank

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/skills/aeo-monitor/: SKILL.md
.claude/skills/audit-legal/: SKILL.md
.claude/skills/batch-articles/: SKILL.md
.claude/skills/generate-schema/: SKILL.md
.claude/skills/geo-optimize/: SKILL.md
.claude/skills/optimize-links/: SKILL.md
.claude/skills/plan-calendar/: SKILL.md
.claude/skills/qa-ai-tells/: SKILL.md
.claude/skills/refresh-article/: SKILL.md
.claude/skills/research-session/: SKILL.md
.claude/skills/review-article/: SKILL.md
.claude/skills/write-article/: SKILL.md
docs/: cli-reference.md  concepts.md  configuration.md  getting-started.md  skills.md
examples/: seedrank.config.yaml
src/seedrank/: __init__.py  __main__.py
src/seedrank/articles/: __init__.py  crosslinks.py
src/seedrank/cli/: __init__.py  articles.py  calendar.py  competitors.py  data.py  gsc.py  init_cmd.py  legal_checks.py  research.py  session.py  status.py  validate.py
src/seedrank/config/: __init__.py  loader.py  schema.py
src/seedrank/data/: __init__.py  articles.py  cache.py  calendar.py  competitors.py  costs.py  db.py  geo.py  keywords.py  links.py  migrations.py  performance.py
src/seedrank/integrations/: __init__.py  gsc.py
src/seedrank/research/: __init__.py  dataforseo.py  geo.py  validator.py
src/seedrank/utils/: paths.py  (+2 more)
tests/: conftest.py  test_ai_tells.py  test_cache.py  test_citability.py  test_cli.py  test_competitors.py  test_config.py  test_crosslinks.py  test_db.py  test_geo_data.py  test_gsc_matching.py  test_improvements.py  test_improvements_batch3.py  test_legal_checks.py  test_legal_tiers.py  test_links.py  test_performance_new.py  test_research.py  test_validate.py
